[package]
name = "peko-extension-host"
version = "0.1.0"
edition = "2021"
authors = ["Peko <peko@coneko.ai>"]
description = "Extension framework host (Phase 8) — owns the SimpleRegistry/SharedRegistry utilities, the SessionInbox/InboxSinkProvider/InboxSinkRegistry cross-boundary traits and concrete types, and the DaemonTransport/DaemonResponse transport projection. Phase 8 commit 1 ships these trait contracts; commit 2 additionally defines the PrincipalMessageService / VaultAccess / PathResolver service traits and relocates SpawnCleanupPolicy so the framework's remaining root couplings (which the Phase 8 audit surfaced) can later be lifted. The bulk move of the framework implementation files is deferred to a follow-up PR — commit 2 ships only the trait contracts and root impls so the audit's P0 coupling risks stay bounded. Depends only on peko-extension-api + peko-message + peko-tools-core + peko-provider-api + peko-subject."
license = "MIT"
repository = "https://github.com/ConekoAI/peko-runtime"

[features]
# The `test-utils` feature gates the `TestSyncHandler` block_until_tool
# primitive. Mirrors the root crate's `test-utils` feature so callers
# that rely on inline lib tests in the host crate keep compiling.
test-utils = []

[dependencies]
peko-extension-api = { path = "../extension-api" }
peko-message = { path = "../message" }
peko-tools-core = { path = "../tools-core" }
peko-provider-api = { path = "../provider-api" }
peko-subject = { path = "../subject" }
peko-providers = { path = "../providers" }
# Phase 8a: framework/core + store.rs + skill_catalog.rs + integration/
# + scaffold/ moved into this crate. Store uses peko-fs-persistence for
# file-lock semantics on the global extension store; scaffold uses
# peko-events; Phase 8b will add peko-session once async_exec moves in.
peko-events = { path = "../events" }
peko-fs-persistence = { path = "../fs-persistence" }
peko-quota = { path = "../quota" }
peko-session = { path = "../session" }
# Phase 8b lift: async_exec/executor/async_runtime_impl.rs adapts the
# host's AsyncExecutor to the `AsyncRuntime` port trait owned by the
# `peko_tools_builtin::async_control` module. Without this dep the
# async spawn/cancel/wait triumvirate has no canonical home for its
# port contract.
peko-tools-builtin = { path = "../tools-builtin" }

async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Phase 8b lift: services::reserved_params::parse_config uses
# `toml::from_str` to materialise `ReservedParamsConfig` from TOML
# manifests. The data type lives in peko-extension-api (no `toml`
# dep), so the parse helper stays in the host where `toml` is allowed.
toml = "0.8"
anyhow = "1.0"
# dirs is used by the inlined `default_async_tasks_dir()` helper that
# mirrors `src/common/paths.rs::default_data_dir()`. The two MUST stay
# in sync; see the comment on `default_async_tasks_dir`.
dirs = "5.0"
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
# Phase 8c.1.C: process_transport.rs uses libc::kill for SIGTERM
# graceful shutdown on Unix. Host needs its own dep since root-only
# `libc = "0.2"` doesn't propagate into the host crate build.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"
# F32b — JSON-Schema validator used by `NoopAsyncExecutionRouter` (the
# host's default `AsyncExecutionRouter`) to validate LLM-emitted args
# before invoking the tool. Mirrors root's `jsonschema = { version = "0.48",
# default-features = false }` dep.
jsonschema = { version = "0.48", default-features = false }
# Phase 8c.1.D.4: packaging.rs uses flate2/tar/sha2 to build `.ext` packages.
# Mirrors the root crate's packaging dep set.
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
# `secrecy` is needed by the `VaultAccess` trait (returns `SecretString`).
# Mirrors the root crate's `secrecy = "0.10"` dep.
secrecy = { version = "0.10", features = ["serde"] }
# `thiserror` is needed by the `TestSyncHandler` (F36) which is gated on
# the `test-utils` feature. Always available because root's `test-utils`
# feature forwards the host's `test-utils` feature.
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
tempfile = "3.10"
thiserror = "1.0"
serial_test = "3.0"