[package]
name = "peko-provider-api"
version = "0.1.0"
edition = "2021"
authors = ["Peko <peko@coneko.ai>"]
description = "Provider contract types (Phase 6) — owns ChatOptions, ChatResponse, StreamEvent, StopReason, ContentDelta, BlockType, ToolDefinition, ContentBlockId, ThinkingEffort, ThinkingFormat, ThinkingKeep, ToolChoice, ServiceTier, CacheRetention, ProviderCompat, DeferredToolsMode. Re-exports LlmMessage / ContentBlock / MessageRole / TokenUsage from peko-message."
license = "MIT"
repository = "https://github.com/ConekoAI/peko-runtime"

[dependencies]
# Workspace member that owns the neutral agentic message contract —
# the API crate references `ContentBlock`, `LlmMessage`, `TokenUsage`
# directly from its own top-level surface.
peko-message = { path = "../message" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Phase 9b.N.5b.5 — `is_context_window_exceeded` (`context_window_error.rs`)
# is a pure bool classifier over `&anyhow::Error`. Pulling anyhow into the
# API crate keeps the loop's classifier path contract-level (no root-only
# transport dep) at the cost of one small transitive dependency.
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["rt", "macros", "time"] }
