[package]
name = "peko-tools-builtin"
version = "0.1.0"
edition = "2021"
authors = ["Peko <peko@coneko.ai"]
description = "Built-in tool implementations (filesystem, async control, cron, session, messaging, skill, task) — Phase 10 ships the subsets in PRs 10a-10e."
license = "MIT"
repository = "https://github.com/ConekoAI/peko-runtime"

[dependencies]
# Phase 10a: filesystem tools only depend on the tool API contract.
peko-tools-core = { path = "../tools-core" }
# Phase 10d: tasks/session/skill tools need peko-message for LlmMessage
# history conversion (session) and peko-subject for the Subject type
# used in `SessionRuntime::list_sessions`.
peko-message = { path = "../message" }
peko-subject = { path = "../subject" }
# Phase 10e: messaging (AgentTool) needs peko-extension-api for
# `AsyncTaskStatus` (used in `SubagentRunView.status`) and
# peko-extension-host for `SpawnCleanupPolicy` (re-exported via the
# `messaging` module so consumers only need one import path).
peko-extension-api = { path = "../extension-api" }
peko-extension-host = { path = "../extension-host" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["fs", "io-util", "process", "rt", "macros", "sync", "time"] }
# Glob pattern matching for GlobTool and Skill preprocessor's
# `allowed-tools` allowlist.
glob = "0.3"
# Regular expression engine for GrepTool.
regex = "1.10"
# base64 encoding for image reads/writes.
base64 = "0.22"
# Schedule validation in `cron::resolve_schedule_kind`.
cron = "0.12"
# Timezone resolution in `cron::calculate_next_run` for `ScheduleKind::Cron`.
chrono-tz = "0.10"
# File mtime formatting for Read/Write metadata + cron job DTOs +
# Phase 10c async_control::TaskView/AsyncToolConfig (`created_at`,
# `completed_at`) and `WaitResult` (a `peko_tools_core::exec::ToolResult`).
# `serde` feature is needed to (de)serialize `DateTime<Utc>` in `CronJob`
# and `TaskView`.
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
# Home directory lookup for tilde expansion in `paths::expand_tilde`.
dirs = "5.0"
# UUID generation for cron job IDs in `cron::resolve_label` and todo
# IDs in `tasks::Todo`.
uuid = { version = "1.10", features = ["v4"] }
# YAML parsing for SkillFrontmatter in `skill::frontmatter`.
serde_yaml = "0.9"
tracing = "0.1"
# CancellationToken for SubagentRuntime port (AgentTool's parent cancel
# propagation through F38).
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.35", features = ["fs", "rt", "macros", "rt-multi-thread"] }