[package]
name = "peko-tools-core"
version = "0.1.0"
edition = "2021"
authors = ["Peko <peko@coneko.ai>"]
description = "Tool execution API — owns Tool, ToolContext, AbortSignal, ToolResult, ToolError, ToolProgressEvent, ToolWithContext, ToolInterruptNotice, ContextSource, ToolContextAdapter, ToolExposure"
license = "MIT"
repository = "https://github.com/ConekoAI/peko-runtime"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
# tokio for the `AbortSignal` `watch` channel, `mpsc` for
# `ToolProgressEvent`, and (dev) async tests.
tokio = { version = "1.35", features = ["rt", "macros", "sync", "time"] }
# `Either` helper for context-shim adapters.
tokio-util = { version = "0.7", features = ["rt"] }
# Used in `context_source.rs` to log unknown-field warnings during
# runtime context resolution.
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.35", features = ["rt", "macros", "sync", "time", "rt-multi-thread"] }
