[package]
name = "discord-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Pekora <peko@coneko.ai>"]
description = "Discord gateway plugin for Pekobot"
license = "MIT"

[lib]
# Build as dynamic library for plugin loading
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

# Discord API (Serenity)
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }

# HTTP client for REST API
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# URL parsing
url = "2.5"

# Once cell for static initialization
once_cell = "1.19"

# Gateway interface
# This provides the shared types and traits
gateway-interface = { path = "../../gateway-interface" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
