[package]
name = "mcp-browser"
version = "0.1.0"
edition = "2021"
description = "MCP Server for browser automation using headless Chrome"

[[bin]]
name = "mcp-browser"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Browser automation
headless_chrome = { version = "1.0", default-features = false }

# Lazy static for shared state
once_cell = "1.19"

# Base64 for screenshots
base64 = "0.21"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
