[package]
name = "mcp-memory"
version = "0.1.0"
edition = "2021"
description = "MCP Server for persistent memory/knowledge storage"

[[bin]]
name = "mcp-memory"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Key-value store
sled = "0.34"

# Lazy initialization
once_cell = "1.19"

# Data directory
dirs = "5.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
