[package]
name = "mcp-web"
version = "0.1.0"
edition = "2021"
description = "MCP Server for web search, fetch, and HTTP tools"

[[bin]]
name = "mcp-web"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# HTML parsing
scraper = "0.19"

# Content extraction
readability = "0.3"

# URL encoding
urlencoding = "2.1"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
