[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peko-tool"
version = "0.1.0"
description = "SDK for building Peko Universal Tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Peko Contributors"}
]
keywords = ["peko", "agent", "tool", "ai", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/ConekoAI/peko-runtime"
Documentation = "https://github.com/ConekoAI/peko-runtime/tree/main/sdks/python/peko_tool"
Repository = "https://github.com/ConekoAI/peko-runtime.git"
Issues = "https://github.com/ConekoAI/peko-runtime/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/peko_tool"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
